fix issues with password generation

--- a/src/assets/config/config.yaml
+++ b/src/assets/config/config.yaml
@@ -1,5 +1,5 @@
 WordCount: 5
-WordList: eff_short_wordlist_1.json
+WordList: assets/wordlists/eff_short_wordlist_1.json
 Capital: false
 Special: false
-Number: true
+Number: false
